# UI-LevelTravel-WEB

./: .env-example  .gitignore  README.md  pyproject.toml
components/: authorization.py
model/: application.py
model/components/: authorization.py
model/pages/: checkout_page.py  hotel_cards_page.py  hotel_page.py  main_page.py
pages/: application.py  checkout_page.py  hotel_cards_page.py  hotel_page.py  hotels_page.py  main_page.py
test_data/: data_for_tests.py
tests/: conftest.py  test_general_smoke.py
utils/: additional_actions.py  attach.py
