[tool.poetry]
name = "ui-leveltravel-web"
version = "0.1.0"
description = ""
authors = ["MikhailIzegov <mikhail.izegov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc8"
pytest = "8.0.0"
python-dotenv = "^1.0.1"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
